[gd_scene load_steps=10 format=3 uid="uid://cemp8g4nsfclf"]

[ext_resource type="PackedScene" uid="uid://3s5vulbxayey" path="res://ProtoRobot/spider_bot_model.gltf" id="1_ib2v2"]
[ext_resource type="Script" path="res://ProtoRobot/spider_bot.gd" id="2_qvapd"]
[ext_resource type="Script" path="res://ProtoRobot/start_ik.gd" id="2_vlj7x"]
[ext_resource type="Script" path="res://ProtoRobot/ik_target.gd" id="4_2qs02"]
[ext_resource type="Script" path="res://ProtoRobot/step_ray.gd" id="4_14j4b"]
[ext_resource type="Script" path="res://ProtoRobot/StepTargetContainer.gd" id="5_i0gxq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wg00c"]
albedo_color = Color(0.843183, 0.843184, 0.843184, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7i10x"]
albedo_color = Color(0.8, 0.105882, 0.254902, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tee6v"]
albedo_color = Color(0.843183, 0.843184, 0.843184, 1)
metallic = 0.3
roughness = 0.7

[node name="spider_bot_model" instance=ExtResource("1_ib2v2")]
script = ExtResource("2_qvapd")

[node name="Armature" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Body_2" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(0.325856, 0, 0, 0, 0.325856, 0, 0, 0, 0.325856, 0, 0, 0)
bone_idx = 21

[node name="Body_2" parent="Armature/Skeleton3D/Body_2" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_wg00c")

[node name="Cylinder" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(0.325856, 0, 0, 0, 0, -0.325856, 0, 0.325856, 0, 0, 0.101015, -0.348666)
bone_idx = 22

[node name="Cylinder" parent="Armature/Skeleton3D/Cylinder" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000345707, -0.00308347, 0.00498533)
surface_material_override/0 = SubResource("StandardMaterial3D_7i10x")

[node name="Leg" parent="Armature/Skeleton3D" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_tee6v")

[node name="FrontLeftLeg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="3"]
root_bone = &"leg0FrontLeft"
tip_bone = &"Foot IKFrontLeft"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../FrontLeftIKTarget")
script = ExtResource("2_vlj7x")

[node name="BackLeftLeg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="4"]
root_bone = &"leg0BackLeft"
tip_bone = &"Foot IKBackLeft"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../BackLeftIKTarget")
script = ExtResource("2_vlj7x")

[node name="FrontRightLeg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="5"]
root_bone = &"leg0FrontRight"
tip_bone = &"Foot IKFrontRight"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../FrontRightIKTarget")
script = ExtResource("2_vlj7x")

[node name="BackRightLeg" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="6"]
root_bone = &"leg0BackRight"
tip_bone = &"Foot IKBackRight"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../BackRightIKTarget")
script = ExtResource("2_vlj7x")

[node name="FrontLeftIKTarget" type="Marker3D" parent="." index="1" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, -0.65, -1.25)
top_level = true
script = ExtResource("4_2qs02")
step_target = NodePath("../StepTargetContainer/FrontLeftStepTargetRaycast/FrontLeftStepTarget")
adjacent_target = NodePath("../FrontRightIKTarget")
opposite_target = NodePath("../BackRightIKTarget")

[node name="BackLeftIKTarget" type="Marker3D" parent="." index="2" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, -0.65, 1.25)
top_level = true
script = ExtResource("4_2qs02")
step_target = NodePath("../StepTargetContainer/BackLeftStepTargetRaycast/BackLeftStepTarget")
adjacent_target = NodePath("../BackRightIKTarget")
opposite_target = NodePath("../FrontRightIKTarget")

[node name="FrontRightIKTarget" type="Marker3D" parent="." index="3" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, -0.65, -1.25)
top_level = true
script = ExtResource("4_2qs02")
step_target = NodePath("../StepTargetContainer/FrontRightStepTargetRaycast/FrontRightStepTarget")
adjacent_target = NodePath("../FrontLeftIKTarget")
opposite_target = NodePath("../BackLeftIKTarget")

[node name="BackRightIKTarget" type="Marker3D" parent="." index="4" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, -0.65, 1.25)
top_level = true
script = ExtResource("4_2qs02")
step_target = NodePath("../StepTargetContainer/BackRightStepTargetRaycast/BackRightStepTarget")
adjacent_target = NodePath("../BackLeftIKTarget")
opposite_target = NodePath("../FrontLeftIKTarget")

[node name="StepTargetContainer" type="Node3D" parent="." index="5"]
script = ExtResource("5_i0gxq")

[node name="FrontLeftStepTargetRaycast" type="RayCast3D" parent="StepTargetContainer" index="0" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, 0.0871557, 0, -0.0868241, 0.992404, -0.0871557, -0.00759612, 0.0868241, 0.996195, -0.9, 3.161, -0.9)
target_position = Vector3(0, -5, 0)
collide_with_areas = true
script = ExtResource("4_14j4b")
step_target = NodePath("FrontLeftStepTarget")

[node name="FrontLeftStepTarget" type="Marker3D" parent="StepTargetContainer/FrontLeftStepTargetRaycast" index="0"]
transform = Transform3D(0.996195, -0.0868241, -0.00759612, 0.0871557, 0.992404, 0.0868241, 9.31322e-10, -0.0871557, 0.996195, 0.219853, -2.51293, 0.220693)

[node name="BackLeftStepTargetRaycast" type="RayCast3D" parent="StepTargetContainer" index="1" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, 0.0871557, 0, -0.0868241, 0.992404, 0.0871557, 0.00759612, -0.0868241, 0.996195, -0.9, 3.161, 0.9)
target_position = Vector3(0, -5, 0)
collide_with_areas = true
script = ExtResource("4_14j4b")
step_target = NodePath("BackLeftStepTarget")

[node name="BackLeftStepTarget" type="Marker3D" parent="StepTargetContainer/BackLeftStepTargetRaycast" index="0"]
transform = Transform3D(0.996195, -0.0868241, 0.00759612, 0.0871557, 0.992404, -0.0868241, -9.31322e-10, 0.0871557, 0.996195, 0.219853, -2.51293, -0.220693)

[node name="FrontRightStepTargetRaycast" type="RayCast3D" parent="StepTargetContainer" index="2" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, -0.0871557, 0, 0.0868241, 0.992404, -0.0871557, 0.00759612, 0.0868241, 0.996195, 0.9, 3.161, -0.9)
target_position = Vector3(0, -5, 0)
collide_with_areas = true
script = ExtResource("4_14j4b")
step_target = NodePath("FrontRightStepTarget")

[node name="FrontRightStepTarget" type="Marker3D" parent="StepTargetContainer/FrontRightStepTargetRaycast" index="0"]
transform = Transform3D(0.996195, 0.0868241, 0.00759612, -0.0871557, 0.992404, 0.0868241, -9.31322e-10, -0.0871557, 0.996195, -0.219853, -2.51293, 0.220693)

[node name="BackRightStepTargetRaycast" type="RayCast3D" parent="StepTargetContainer" index="3" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, -0.0871557, 0, 0.0868241, 0.992404, 0.0871557, -0.00759612, -0.0868241, 0.996195, 0.9, 3.161, 0.9)
target_position = Vector3(0, -5, 0)
collide_with_areas = true
script = ExtResource("4_14j4b")
step_target = NodePath("BackRightStepTarget")

[node name="BackRightStepTarget" type="Marker3D" parent="StepTargetContainer/BackRightStepTargetRaycast" index="0"]
transform = Transform3D(0.996195, 0.0868241, -0.00759612, -0.0871557, 0.992404, -0.0868241, 9.31322e-10, 0.0871557, 0.996195, -0.219853, -2.51293, -0.220693)

[node name="Camera3D" type="Camera3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2.01064, 2.58663)
